This commit contains all of the hcanges to implement commands and keyboard input from controller and keyboard. All the command executes throw an unimplemented exception.
Related Work Items: #50, #51, #52, #53, #54

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -41,6 +41,16 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Commands\ActionCommand.cs" />
+    <Compile Include="Commands\CrouchCommand.cs" />
+    <Compile Include="Commands\JumpCommand.cs" />
+    <Compile Include="Commands\LeftCommand.cs" />
+    <Compile Include="Commands\PauseCommand.cs" />
+    <Compile Include="Commands\RightCommand.cs" />
+    <Compile Include="Theming\Script.cs" />
+    <Compile Include="Commands\ICommand.cs" />
+    <Compile Include="Controllers\Controllers.cs" />
+    <Compile Include="Controllers\IController.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
