--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -95,6 +95,11 @@
     <Compile Include="MarioStates\Super\Right\SuperWalkingRight.cs" />
     <Compile Include="Sprites\AnimatedSprite.cs" />
     <Compile Include="Sprites\StaticSprite.cs" />
+    <Compile Include="Commands\BrickBlockCommand.cs" />
+    <Compile Include="Commands\HiddenBlockCommand.cs" />
+    <Compile Include="Commands\QuestionBlockCommand.cs" />
+    <Compile Include="Commands\DeadStateCommand.cs" />
+    <Compile Include="Commands\FireStateCommand.cs" />
     <Compile Include="Theming\Script.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Controllers\Controllers.cs" />
@@ -102,6 +107,9 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Commands\UsedBlockCommand.cs" />
+    <Compile Include="Commands\StdStateCommand.cs" />
+    <Compile Include="Commands\SuperStateCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
