This commit includes the player 1 avatar visual with all of the different associated and combined states (firecrouching, supercrouching, etc)... Using the controls involved with the avatar (up,down,left,right),the avatar will change the spritesheet to meet the state.
Related Work Items: #62, #71, #72, #73, #74

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -47,6 +47,54 @@
     <Compile Include="Commands\LeftCommand.cs" />
     <Compile Include="Commands\PauseCommand.cs" />
     <Compile Include="Commands\RightCommand.cs" />
+    <Compile Include="Factory\SpriteFactory.cs" />
+    <Compile Include="Interfaces\IMarioState.cs" />
+    <Compile Include="Interfaces\ISprite.cs" />
+    <Compile Include="Interfaces\ISpriteFactory.cs" />
+    <Compile Include="MarioPlayerObject\Mario.cs" />
+    <Compile Include="MarioStates\Dead\Dead.cs" />
+    <Compile Include="MarioStates\Fire\Left\FireCrouchingLeft.cs" />
+    <Compile Include="MarioStates\Fire\Left\FireFallingLeft.cs" />
+    <Compile Include="MarioStates\Fire\Left\FireIdleLeft.cs" />
+    <Compile Include="MarioStates\Fire\Left\FireJumpingLeft.cs" />
+    <Compile Include="MarioStates\Fire\Left\FireWalkingLeft.cs" />
+    <Compile Include="MarioStates\Fire\Right\FireCrouchingRight.cs" />
+    <Compile Include="MarioStates\Fire\Right\FireFallingRight.cs" />
+    <Compile Include="MarioStates\Fire\Right\FireIdleRight.cs" />
+    <Compile Include="MarioStates\Fire\Right\FireJumpingRight.cs" />
+    <Compile Include="MarioStates\Fire\Right\FireWalkingRight.cs" />
+    <Compile Include="MarioStates\Invincible\Left\InvincibleCrouchingLeft.cs" />
+    <Compile Include="MarioStates\Invincible\Left\InvincibleFallingLeft.cs" />
+    <Compile Include="MarioStates\Invincible\Left\InvincibleIdleLeft.cs" />
+    <Compile Include="MarioStates\Invincible\Left\InvincibleJumpingLeft.cs" />
+    <Compile Include="MarioStates\Invincible\Left\InvincibleWalkingLeft.cs" />
+    <Compile Include="MarioStates\Invincible\Right\InvincibleCrouchingRight.cs" />
+    <Compile Include="MarioStates\Invincible\Right\InvincibleFallingRight.cs" />
+    <Compile Include="MarioStates\Invincible\Right\InvincibleIdleRight.cs" />
+    <Compile Include="MarioStates\Invincible\Right\InvincibleJumpingRight.cs" />
+    <Compile Include="MarioStates\Invincible\Right\InvincibleWalkingRight.cs" />
+    <Compile Include="MarioStates\Standard\Left\StandardCrouchingLeft.cs" />
+    <Compile Include="MarioStates\Standard\Left\StandardFallingLeft.cs" />
+    <Compile Include="MarioStates\Standard\Left\StandardIdleLeft.cs" />
+    <Compile Include="MarioStates\Standard\Left\StandardJumpingLeft.cs" />
+    <Compile Include="MarioStates\Standard\Left\StandardWalkingLeft.cs" />
+    <Compile Include="MarioStates\Standard\Right\StandardCrouchingRight.cs" />
+    <Compile Include="MarioStates\Standard\Right\StandardFallingRight.cs" />
+    <Compile Include="MarioStates\Standard\Right\StandardIdleRight.cs" />
+    <Compile Include="MarioStates\Standard\Right\StandardJumpingRight.cs" />
+    <Compile Include="MarioStates\Standard\Right\StandardWalkingRight.cs" />
+    <Compile Include="MarioStates\Super\Left\SuperCrouchingLeft.cs" />
+    <Compile Include="MarioStates\Super\Left\SuperFallingLeft.cs" />
+    <Compile Include="MarioStates\Super\Left\SuperIdleLeft.cs" />
+    <Compile Include="MarioStates\Super\Left\SuperJumpingLeft.cs" />
+    <Compile Include="MarioStates\Super\Left\SuperWalkingLeft.cs" />
+    <Compile Include="MarioStates\Super\Right\SuperCrouchingRight.cs" />
+    <Compile Include="MarioStates\Super\Right\SuperFallingRight.cs" />
+    <Compile Include="MarioStates\Super\Right\SuperIdleRight.cs" />
+    <Compile Include="MarioStates\Super\Right\SuperJumpingRight.cs" />
+    <Compile Include="MarioStates\Super\Right\SuperWalkingRight.cs" />
+    <Compile Include="Sprites\AnimatedSprite.cs" />
+    <Compile Include="Sprites\StaticSprite.cs" />
     <Compile Include="Theming\Script.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Controllers\Controllers.cs" />
@@ -63,11 +111,135 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Dead.png" />
+    <Content Include="Content\FireCrouchingLeft.png" />
+    <Content Include="Content\FireCrouchingRight.png" />
+    <Content Include="Content\FireFallingLeft.png" />
+    <Content Include="Content\FireFallingRight.png" />
+    <Content Include="Content\FireIdleLeft.png" />
+    <Content Include="Content\FireIdleRight.png" />
+    <Content Include="Content\FireJumpingLeft.png" />
+    <Content Include="Content\FireJumpingRight.png" />
+    <Content Include="Content\FireWalkingLeft.png" />
+    <Content Include="Content\FireWalkingRight.png" />
+    <Content Include="Content\InvincibleCrouchingLeft.png" />
+    <Content Include="Content\InvincibleCrouchingRight.png" />
+    <Content Include="Content\InvincibleFallingLeft.png" />
+    <Content Include="Content\InvincibleFallingRight.png" />
+    <Content Include="Content\InvincibleIdleLeft.png" />
+    <Content Include="Content\InvincibleIdleRight.png" />
+    <Content Include="Content\InvincibleJumpingLeft.png" />
+    <Content Include="Content\InvincibleJumpingRight.png" />
+    <Content Include="Content\InvincibleWalkingLeft.png" />
+    <Content Include="Content\InvincibleWalkingRight.png" />
+    <Content Include="Content\StandardCrouchingLeft.png" />
+    <Content Include="Content\StandardCrouchingRight.png" />
+    <Content Include="Content\StandardFallingLeft.png" />
+    <Content Include="Content\StandardFallingRight.png" />
+    <Content Include="Content\StandardIdleLeft.png" />
+    <Content Include="Content\StandardIdleRight.png" />
+    <Content Include="Content\StandardJumpingLeft.png" />
+    <Content Include="Content\StandardJumpingRight.png" />
+    <Content Include="Content\StandardWalkingLeft.png" />
+    <Content Include="Content\StandardWalkingRight.png" />
+    <Content Include="Content\SuperCrouchingLeft.png" />
+    <Content Include="Content\SuperCrouchingRight.png" />
+    <Content Include="Content\SuperFallingLeft.png" />
+    <Content Include="Content\SuperFallingRight.png" />
+    <Content Include="Content\SuperIdleLeft.png" />
+    <Content Include="Content\SuperIdleRight.png" />
+    <Content Include="Content\SuperJumpingLeft.png" />
+    <Content Include="Content\SuperJumpingRight.png" />
+    <Content Include="Content\SuperWalkingLeft.png" />
+    <Content Include="Content\SuperWalkingRight.png" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.manifest" />
+    <None Include="Content\bin\Windows\Dead.xnb" />
+    <None Include="Content\bin\Windows\FireCrouchingLeft.xnb" />
+    <None Include="Content\bin\Windows\FireCrouchingRight.xnb" />
+    <None Include="Content\bin\Windows\FireFallingLeft.xnb" />
+    <None Include="Content\bin\Windows\FireFallingRight.xnb" />
+    <None Include="Content\bin\Windows\FireIdleLeft.xnb" />
+    <None Include="Content\bin\Windows\FireIdleRight.xnb" />
+    <None Include="Content\bin\Windows\FireJumpingLeft.xnb" />
+    <None Include="Content\bin\Windows\FireJumpingRight.xnb" />
+    <None Include="Content\bin\Windows\FireWalkingLeft.xnb" />
+    <None Include="Content\bin\Windows\FireWalkingRight.xnb" />
+    <None Include="Content\bin\Windows\InvincibleCrouchingLeft.xnb" />
+    <None Include="Content\bin\Windows\InvincibleCrouchingRight.xnb" />
+    <None Include="Content\bin\Windows\InvincibleFallingLeft.xnb" />
+    <None Include="Content\bin\Windows\InvincibleFallingRight.xnb" />
+    <None Include="Content\bin\Windows\InvincibleIdleLeft.xnb" />
+    <None Include="Content\bin\Windows\InvincibleIdleRight.xnb" />
+    <None Include="Content\bin\Windows\InvincibleJumpingLeft.xnb" />
+    <None Include="Content\bin\Windows\InvincibleJumpingRight.xnb" />
+    <None Include="Content\bin\Windows\InvincibleWalkingLeft.xnb" />
+    <None Include="Content\bin\Windows\InvincibleWalkingRight.xnb" />
+    <None Include="Content\bin\Windows\StandardCrouchingLeft.xnb" />
+    <None Include="Content\bin\Windows\StandardCrouchingRight.xnb" />
+    <None Include="Content\bin\Windows\StandardFallingLeft.xnb" />
+    <None Include="Content\bin\Windows\StandardFallingRight.xnb" />
+    <None Include="Content\bin\Windows\StandardIdleLeft.xnb" />
+    <None Include="Content\bin\Windows\StandardIdleRight.xnb" />
+    <None Include="Content\bin\Windows\StandardJumpingLeft.xnb" />
+    <None Include="Content\bin\Windows\StandardJumpingRight.xnb" />
+    <None Include="Content\bin\Windows\StandardWalkingLeft.xnb" />
+    <None Include="Content\bin\Windows\StandardWalkingRight.xnb" />
+    <None Include="Content\bin\Windows\SuperCrouchingLeft.xnb" />
+    <None Include="Content\bin\Windows\SuperCrouchingRight.xnb" />
+    <None Include="Content\bin\Windows\SuperFallingLeft.xnb" />
+    <None Include="Content\bin\Windows\SuperFallingRight.xnb" />
+    <None Include="Content\bin\Windows\SuperIdleLeft.xnb" />
+    <None Include="Content\bin\Windows\SuperIdleRight.xnb" />
+    <None Include="Content\bin\Windows\SuperJumpingLeft.xnb" />
+    <None Include="Content\bin\Windows\SuperJumpingRight.xnb" />
+    <None Include="Content\bin\Windows\SuperWalkingLeft.xnb" />
+    <None Include="Content\bin\Windows\SuperWalkingRight.xnb" />
+    <None Include="Content\obj\Windows\.mgcontent" />
+    <None Include="Content\obj\Windows\Dead.mgcontent" />
+    <None Include="Content\obj\Windows\FireCrouchingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\FireCrouchingRight.mgcontent" />
+    <None Include="Content\obj\Windows\FireFallingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\FireFallingRight.mgcontent" />
+    <None Include="Content\obj\Windows\FireIdleLeft.mgcontent" />
+    <None Include="Content\obj\Windows\FireIdleRight.mgcontent" />
+    <None Include="Content\obj\Windows\FireJumpingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\FireJumpingRight.mgcontent" />
+    <None Include="Content\obj\Windows\FireWalkingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\FireWalkingRight.mgcontent" />
+    <None Include="Content\obj\Windows\InvincibleCrouchingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\InvincibleCrouchingRight.mgcontent" />
+    <None Include="Content\obj\Windows\InvincibleFallingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\InvincibleFallingRight.mgcontent" />
+    <None Include="Content\obj\Windows\InvincibleIdleLeft.mgcontent" />
+    <None Include="Content\obj\Windows\InvincibleIdleRight.mgcontent" />
+    <None Include="Content\obj\Windows\InvincibleJumpingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\InvincibleJumpingRight.mgcontent" />
+    <None Include="Content\obj\Windows\InvincibleWalkingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\InvincibleWalkingRight.mgcontent" />
+    <None Include="Content\obj\Windows\StandardCrouchingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\StandardCrouchingRight.mgcontent" />
+    <None Include="Content\obj\Windows\StandardFallingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\StandardFallingRight.mgcontent" />
+    <None Include="Content\obj\Windows\StandardIdleLeft.mgcontent" />
+    <None Include="Content\obj\Windows\StandardIdleRight.mgcontent" />
+    <None Include="Content\obj\Windows\StandardJumpingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\StandardJumpingRight.mgcontent" />
+    <None Include="Content\obj\Windows\StandardWalkingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\StandardWalkingRight.mgcontent" />
+    <None Include="Content\obj\Windows\SuperCrouchingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\SuperCrouchingRight.mgcontent" />
+    <None Include="Content\obj\Windows\SuperFallingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\SuperFallingRight.mgcontent" />
+    <None Include="Content\obj\Windows\SuperIdleLeft.mgcontent" />
+    <None Include="Content\obj\Windows\SuperIdleRight.mgcontent" />
+    <None Include="Content\obj\Windows\SuperJumpingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\SuperJumpingRight.mgcontent" />
+    <None Include="Content\obj\Windows\SuperWalkingLeft.mgcontent" />
+    <None Include="Content\obj\Windows\SuperWalkingRight.mgcontent" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
