Added a game model (will work when sprites take gametime for update and spritebatch for draw) and changed commands to expect this mdoelinstead of script.
Related Work Items: #82, #84

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Commands\DeadStateCommand.cs" />
     <Compile Include="Commands\FireStateCommand.cs" />
     <Compile Include="Sprites\UsedQuestionSprite.cs" />
+    <Compile Include="Theming\GameModel.cs" />
     <Compile Include="Theming\Script.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Controllers\Controllers.cs" />
