--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Sprites\BrickSprite.cs" />
     <Compile Include="Sprites\DestroyingSprite.cs" />
     <Compile Include="Sprites\FloorSprite.cs" />
+    <Compile Include="Sprites\GoombaSprite.cs" />
     <Compile Include="Sprites\QuestionSprite.cs" />
     <Compile Include="Sprites\StairSprite.cs" />
     <Compile Include="Sprites\StaticSprite.cs" />
