--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -55,11 +55,13 @@
     <Compile Include="Commands\LeftCommand.cs" />
     <Compile Include="Commands\PauseCommand.cs" />
     <Compile Include="Commands\RightCommand.cs" />
+    <Compile Include="Factory\CommandFactory.cs" />
     <Compile Include="Factory\SpriteFactory.cs" />
     <Compile Include="GoombaObject\Goomba.cs" />
     <Compile Include="GoombaStates\GoombaDefeatedState.cs" />
     <Compile Include="GoombaStates\GoombaNormalState.cs" />
-    <Compile Include="GoombaState\GoombaState.cs" />
+    <Compile Include="Interfaces\ICommandFactory.cs" />
+    <Compile Include="Interfaces\IGoombaState.cs" />
     <Compile Include="Interfaces\IBlock.cs" />
     <Compile Include="Interfaces\IBlockState.cs" />
     <Compile Include="Interfaces\IMarioState.cs" />
