--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -41,14 +41,16 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="BlockStates\Destroy.cs" />
-    <Compile Include="BlockStates\Hidden.cs" />
-    <Compile Include="BlockStates\Silent.cs" />
-    <Compile Include="BlockStates\Used.cs" />
-    <Compile Include="Blocks\BrickBlock.cs" />
-    <Compile Include="Blocks\FloorBlock.cs" />
-    <Compile Include="Blocks\QuestionBlock.cs" />
-    <Compile Include="Blocks\StairBlock.cs" />
+    <Compile Include="BlockObjects\BaseUseableBlock.cs" />
+    <Compile Include="BlockObjects\BaseBlock.cs" />
+    <Compile Include="BlockObjects\States\Destroied.cs" />
+    <Compile Include="BlockObjects\States\Hidden.cs" />
+    <Compile Include="BlockObjects\States\Silent.cs" />
+    <Compile Include="BlockObjects\States\Used.cs" />
+    <Compile Include="BlockObjects\BrickBlock.cs" />
+    <Compile Include="BlockObjects\FloorBlock.cs" />
+    <Compile Include="BlockObjects\QuestionBlock.cs" />
+    <Compile Include="BlockObjects\StairBlock.cs" />
     <Compile Include="Commands\ActionCommand.cs" />
     <Compile Include="Commands\CrouchCommand.cs" />
     <Compile Include="Commands\JumpCommand.cs" />
@@ -57,51 +59,51 @@
     <Compile Include="Commands\RightCommand.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\KeyboardController.cs" />
-    <Compile Include="Factory\CommandFactory.cs" />
-    <Compile Include="Factory\SpriteFactory.cs" />
-    <Compile Include="GoombaObject\Goomba.cs" />
-    <Compile Include="GoombaStates\GoombaDefeatedState.cs" />
-    <Compile Include="GoombaStates\GoombaNormalState.cs" />
+    <Compile Include="Factories\CommandFactory.cs" />
+    <Compile Include="Factories\SpriteFactory.cs" />
+    <Compile Include="GoombaObjects\Goomba.cs" />
+    <Compile Include="GoombaObjects\States\Defeated.cs" />
+    <Compile Include="GoombaObjects\States\Normal.cs" />
     <Compile Include="Interfaces\ICommandFactory.cs" />
     <Compile Include="Interfaces\IGoombaState.cs" />
-    <Compile Include="Interfaces\IBlock.cs" />
+    <Compile Include="Interfaces\IGameObject.cs" />
     <Compile Include="Interfaces\IBlockState.cs" />
     <Compile Include="Interfaces\IMarioState.cs" />
     <Compile Include="Interfaces\ISprite.cs" />
     <Compile Include="Interfaces\ISpriteFactory.cs" />
-    <Compile Include="KoopaObject\RedKoopaSprite.cs" />
-    <Compile Include="MarioPlayerObject\Mario.cs" />
-    <Compile Include="MarioStates\Dead\Dead.cs" />
-    <Compile Include="MarioStates\Fire\Left\FireCrouchingLeft.cs" />
-    <Compile Include="MarioStates\Fire\Left\FireFallingLeft.cs" />
-    <Compile Include="MarioStates\Fire\Left\FireIdleLeft.cs" />
-    <Compile Include="MarioStates\Fire\Left\FireJumpingLeft.cs" />
-    <Compile Include="MarioStates\Fire\Left\FireWalkingLeft.cs" />
-    <Compile Include="MarioStates\Fire\Right\FireCrouchingRight.cs" />
-    <Compile Include="MarioStates\Fire\Right\FireFallingRight.cs" />
-    <Compile Include="MarioStates\Fire\Right\FireIdleRight.cs" />
-    <Compile Include="MarioStates\Fire\Right\FireJumpingRight.cs" />
-    <Compile Include="MarioStates\Fire\Right\FireWalkingRight.cs" />
-    <Compile Include="MarioStates\Standard\Left\StandardCrouchingLeft.cs" />
-    <Compile Include="MarioStates\Standard\Left\StandardFallingLeft.cs" />
-    <Compile Include="MarioStates\Standard\Left\StandardIdleLeft.cs" />
-    <Compile Include="MarioStates\Standard\Left\StandardJumpingLeft.cs" />
-    <Compile Include="MarioStates\Standard\Left\StandardWalkingLeft.cs" />
-    <Compile Include="MarioStates\Standard\Right\StandardCrouchingRight.cs" />
-    <Compile Include="MarioStates\Standard\Right\StandardFallingRight.cs" />
-    <Compile Include="MarioStates\Standard\Right\StandardIdleRight.cs" />
-    <Compile Include="MarioStates\Standard\Right\StandardJumpingRight.cs" />
-    <Compile Include="MarioStates\Standard\Right\StandardWalkingRight.cs" />
-    <Compile Include="MarioStates\Super\Left\SuperCrouchingLeft.cs" />
-    <Compile Include="MarioStates\Super\Left\SuperFallingLeft.cs" />
-    <Compile Include="MarioStates\Super\Left\SuperIdleLeft.cs" />
-    <Compile Include="MarioStates\Super\Left\SuperJumpingLeft.cs" />
-    <Compile Include="MarioStates\Super\Left\SuperWalkingLeft.cs" />
-    <Compile Include="MarioStates\Super\Right\SuperCrouchingRight.cs" />
-    <Compile Include="MarioStates\Super\Right\SuperFallingRight.cs" />
-    <Compile Include="MarioStates\Super\Right\SuperIdleRight.cs" />
-    <Compile Include="MarioStates\Super\Right\SuperJumpingRight.cs" />
-    <Compile Include="MarioStates\Super\Right\SuperWalkingRight.cs" />
+    <Compile Include="Sprites\RedKoopaSprite.cs" />
+    <Compile Include="MarioObjects\Mario.cs" />
+    <Compile Include="MarioObjects\States\Dead\Dead.cs" />
+    <Compile Include="MarioObjects\States\Fire\Left\FireCrouchingLeft.cs" />
+    <Compile Include="MarioObjects\States\Fire\Left\FireFallingLeft.cs" />
+    <Compile Include="MarioObjects\States\Fire\Left\FireIdleLeft.cs" />
+    <Compile Include="MarioObjects\States\Fire\Left\FireJumpingLeft.cs" />
+    <Compile Include="MarioObjects\States\Fire\Left\FireWalkingLeft.cs" />
+    <Compile Include="MarioObjects\States\Fire\Right\FireCrouchingRight.cs" />
+    <Compile Include="MarioObjects\States\Fire\Right\FireFallingRight.cs" />
+    <Compile Include="MarioObjects\States\Fire\Right\FireIdleRight.cs" />
+    <Compile Include="MarioObjects\States\Fire\Right\FireJumpingRight.cs" />
+    <Compile Include="MarioObjects\States\Fire\Right\FireWalkingRight.cs" />
+    <Compile Include="MarioObjects\States\Standard\Left\StandardCrouchingLeft.cs" />
+    <Compile Include="MarioObjects\States\Standard\Left\StandardFallingLeft.cs" />
+    <Compile Include="MarioObjects\States\Standard\Left\StandardIdleLeft.cs" />
+    <Compile Include="MarioObjects\States\Standard\Left\StandardJumpingLeft.cs" />
+    <Compile Include="MarioObjects\States\Standard\Left\StandardWalkingLeft.cs" />
+    <Compile Include="MarioObjects\States\Standard\Right\StandardCrouchingRight.cs" />
+    <Compile Include="MarioObjects\States\Standard\Right\StandardFallingRight.cs" />
+    <Compile Include="MarioObjects\States\Standard\Right\StandardIdleRight.cs" />
+    <Compile Include="MarioObjects\States\Standard\Right\StandardJumpingRight.cs" />
+    <Compile Include="MarioObjects\States\Standard\Right\StandardWalkingRight.cs" />
+    <Compile Include="MarioObjects\States\Super\Left\SuperCrouchingLeft.cs" />
+    <Compile Include="MarioObjects\States\Super\Left\SuperFallingLeft.cs" />
+    <Compile Include="MarioObjects\States\Super\Left\SuperIdleLeft.cs" />
+    <Compile Include="MarioObjects\States\Super\Left\SuperJumpingLeft.cs" />
+    <Compile Include="MarioObjects\States\Super\Left\SuperWalkingLeft.cs" />
+    <Compile Include="MarioObjects\States\Super\Right\SuperCrouchingRight.cs" />
+    <Compile Include="MarioObjects\States\Super\Right\SuperFallingRight.cs" />
+    <Compile Include="MarioObjects\States\Super\Right\SuperIdleRight.cs" />
+    <Compile Include="MarioObjects\States\Super\Right\SuperJumpingRight.cs" />
+    <Compile Include="MarioObjects\States\Super\Right\SuperWalkingRight.cs" />
     <Compile Include="Sprites\AnimatedSprite.cs" />
     <Compile Include="Sprites\BrickSprite.cs" />
     <Compile Include="Sprites\DestroyingSprite.cs" />
@@ -267,6 +269,7 @@
     <None Include="Content\obj\Windows\SuperWalkingRight.mgcontent" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="KoopaObjects\" />
     <Folder Include="PowerUps\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
