Add goomba and koopa state design patterns and classes

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -64,6 +64,10 @@
     <Compile Include="GoombaObjects\Goomba.cs" />
     <Compile Include="GoombaObjects\States\Defeated.cs" />
     <Compile Include="GoombaObjects\States\Normal.cs" />
+    <Compile Include="GoombaObject\Goomba.cs" />
+    <Compile Include="GoombaStates\GoombaNormalState.cs" />
+    <Compile Include="GoombaStates\GoombaDefeatedState.cs" />
+    <Compile Include="Interfaces\IKoopaState.cs" />
     <Compile Include="Interfaces\ICommandFactory.cs" />
     <Compile Include="Interfaces\IGoombaState.cs" />
     <Compile Include="Interfaces\IGameObject.cs" />
@@ -71,7 +75,46 @@
     <Compile Include="Interfaces\IMarioState.cs" />
     <Compile Include="Interfaces\ISprite.cs" />
     <Compile Include="Interfaces\ISpriteFactory.cs" />
-    <Compile Include="KoopaObject\RedKoopaSprite.cs" />
+    <Compile Include="KoopaObject\GreenKoopa.cs" />
+    <Compile Include="KoopaObject\RedKoopa.cs" />
+    <Compile Include="KoopaStates\RedKoopaNormalState.cs" />
+    <Compile Include="KoopaStates\RedKoopaJumpOnState.cs" />
+    <Compile Include="KoopaStates\RedKoopaDefeatedState.cs" />
+    <Compile Include="KoopaStates\GreenKoopaNormalState.cs" />
+    <Compile Include="KoopaStates\GreenKoopaJumpOnState.cs" />
+    <Compile Include="KoopaStates\GreenKoopaDefeatedState.cs" />
+    <Compile Include="MarioObjects\Mario.cs" />
+    <Compile Include="MarioObjects\States\Dead\Dead.cs" />
+    <Compile Include="MarioObjects\States\Fire\Left\FireCrouchingLeft.cs" />
+    <Compile Include="MarioObjects\States\Fire\Left\FireFallingLeft.cs" />
+    <Compile Include="MarioObjects\States\Fire\Left\FireIdleLeft.cs" />
+    <Compile Include="MarioObjects\States\Fire\Left\FireJumpingLeft.cs" />
+    <Compile Include="MarioObjects\States\Fire\Left\FireWalkingLeft.cs" />
+    <Compile Include="MarioObjects\States\Fire\Right\FireCrouchingRight.cs" />
+    <Compile Include="MarioObjects\States\Fire\Right\FireFallingRight.cs" />
+    <Compile Include="MarioObjects\States\Fire\Right\FireIdleRight.cs" />
+    <Compile Include="MarioObjects\States\Fire\Right\FireJumpingRight.cs" />
+    <Compile Include="MarioObjects\States\Fire\Right\FireWalkingRight.cs" />
+    <Compile Include="MarioObjects\States\Standard\Left\StandardCrouchingLeft.cs" />
+    <Compile Include="MarioObjects\States\Standard\Left\StandardFallingLeft.cs" />
+    <Compile Include="MarioObjects\States\Standard\Left\StandardIdleLeft.cs" />
+    <Compile Include="MarioObjects\States\Standard\Left\StandardJumpingLeft.cs" />
+    <Compile Include="MarioObjects\States\Standard\Left\StandardWalkingLeft.cs" />
+    <Compile Include="MarioObjects\States\Standard\Right\StandardCrouchingRight.cs" />
+    <Compile Include="MarioObjects\States\Standard\Right\StandardFallingRight.cs" />
+    <Compile Include="MarioObjects\States\Standard\Right\StandardIdleRight.cs" />
+    <Compile Include="MarioObjects\States\Standard\Right\StandardJumpingRight.cs" />
+    <Compile Include="MarioObjects\States\Standard\Right\StandardWalkingRight.cs" />
+    <Compile Include="MarioObjects\States\Super\Left\SuperCrouchingLeft.cs" />
+    <Compile Include="MarioObjects\States\Super\Left\SuperFallingLeft.cs" />
+    <Compile Include="MarioObjects\States\Super\Left\SuperIdleLeft.cs" />
+    <Compile Include="MarioObjects\States\Super\Left\SuperJumpingLeft.cs" />
+    <Compile Include="MarioObjects\States\Super\Left\SuperWalkingLeft.cs" />
+    <Compile Include="MarioObjects\States\Super\Right\SuperCrouchingRight.cs" />
+    <Compile Include="MarioObjects\States\Super\Right\SuperFallingRight.cs" />
+    <Compile Include="MarioObjects\States\Super\Right\SuperIdleRight.cs" />
+    <Compile Include="MarioObjects\States\Super\Right\SuperJumpingRight.cs" />
+    <Compile Include="MarioObjects\States\Super\Right\SuperWalkingRight.cs" />
     <Compile Include="MarioPlayerObject\Mario.cs" />
     <Compile Include="MarioStates\Dead\Dead.cs" />
     <Compile Include="MarioStates\Fire\Left\FireCrouchingLeft.cs" />
@@ -106,10 +149,12 @@
     <Compile Include="MarioStates\Super\Right\SuperWalkingRight.cs" />
     <Compile Include="Sprites\AnimatedSprite.cs" />
     <Compile Include="Sprites\BrickSprite.cs" />
+    <Compile Include="Sprites\GreenKoopaSprite.cs" />
     <Compile Include="Sprites\DestroyingSprite.cs" />
     <Compile Include="Sprites\FloorSprite.cs" />
     <Compile Include="Sprites\GoombaSprite.cs" />
     <Compile Include="Sprites\QuestionSprite.cs" />
+    <Compile Include="Sprites\RedKoopaSprite.cs" />
     <Compile Include="Sprites\StairSprite.cs" />
     <Compile Include="Sprites\StaticSprite.cs" />
     <Compile Include="Commands\BrickBlockCommand.cs" />
@@ -156,17 +201,22 @@
     <Content Include="bin\Windows\x86\Debug\SharpDX.XInput.dll" />
     <Content Include="bin\Windows\x86\Debug\SharpDX.XInput.xml" />
     <Content Include="bin\Windows\x86\Debug\SharpDX.xml" />
+    <Content Include="Content\1-UpMashroom.png" />
+    <Content Include="Content\coin.png" />
     <Content Include="Content\Dead.png" />
     <Content Include="Content\FireCrouchingLeft.png" />
     <Content Include="Content\FireCrouchingRight.png" />
     <Content Include="Content\FireFallingLeft.png" />
     <Content Include="Content\FireFallingRight.png" />
+    <Content Include="Content\fireFlower.png" />
     <Content Include="Content\FireIdleLeft.png" />
     <Content Include="Content\FireIdleRight.png" />
     <Content Include="Content\FireJumpingLeft.png" />
     <Content Include="Content\FireJumpingRight.png" />
     <Content Include="Content\FireWalkingLeft.png" />
     <Content Include="Content\FireWalkingRight.png" />
+    <Content Include="Content\goomba.png" />
+    <Content Include="Content\greenKoopa.png" />
     <Content Include="Content\InvincibleCrouchingLeft.png" />
     <Content Include="Content\InvincibleCrouchingRight.png" />
     <Content Include="Content\InvincibleFallingLeft.png" />
@@ -177,6 +227,7 @@
     <Content Include="Content\InvincibleJumpingRight.png" />
     <Content Include="Content\InvincibleWalkingLeft.png" />
     <Content Include="Content\InvincibleWalkingRight.png" />
+    <Content Include="Content\redKoopa.png" />
     <Content Include="Content\StandardCrouchingLeft.png" />
     <Content Include="Content\StandardCrouchingRight.png" />
     <Content Include="Content\StandardFallingLeft.png" />
@@ -187,6 +238,7 @@
     <Content Include="Content\StandardJumpingRight.png" />
     <Content Include="Content\StandardWalkingLeft.png" />
     <Content Include="Content\StandardWalkingRight.png" />
+    <Content Include="Content\star.png" />
     <Content Include="Content\SuperCrouchingLeft.png" />
     <Content Include="Content\SuperCrouchingRight.png" />
     <Content Include="Content\SuperFallingLeft.png" />
@@ -195,6 +247,7 @@
     <Content Include="Content\SuperIdleRight.png" />
     <Content Include="Content\SuperJumpingLeft.png" />
     <Content Include="Content\SuperJumpingRight.png" />
+    <Content Include="Content\superMashroom.png" />
     <Content Include="Content\SuperWalkingLeft.png" />
     <Content Include="Content\SuperWalkingRight.png" />
     <Content Include="Icon.ico" />
