--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -51,6 +51,7 @@
     <Compile Include="BlockObjects\Floor.cs" />
     <Compile Include="BlockObjects\Question.cs" />
     <Compile Include="BlockObjects\Stair.cs" />
+    <Compile Include="Commands\BaseCommand.cs" />
     <Compile Include="Commands\ActionCommand.cs" />
     <Compile Include="Commands\CrouchCommand.cs" />
     <Compile Include="Commands\JumpCommand.cs" />
@@ -152,7 +153,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\UsedBlockCommand.cs" />
-    <Compile Include="Commands\StdStateCommand.cs" />
+    <Compile Include="Commands\StandardStateCommand.cs" />
     <Compile Include="Commands\SuperStateCommand.cs" />
   </ItemGroup>
   <ItemGroup>
